--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Joke teller</title>
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-  
+  <div class="container">
+    <button id="button">Tell me a joke</button>
+    <audio id="audio" controls></audio>
+  </div>
+
+  <!-- script -->
+  <script src="./src/main.js"></script>
 </body>
 </html>
